Closed Bug 171944 Opened 23 years ago Closed 23 years ago

Unable to log in to Lycos mail

Categories

(Core :: Networking: Cookies, defect, P2)

x86
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla1.2beta

People

(Reporter: lawrenceteo, Assigned: morse)

References

()

Details

(Keywords: regression, top100)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.2b) Gecko/20020930 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.2b) Gecko/20020930 I am unable to log in to Lycos mail via the URL specified. When I enter my username and password, and press the Log In button, the page just refreshes and brings me back to the main login page. It doesn't log me in at all. Earlier Mozilla builds were okay. There's just something weird happening with this one. Reproducible: Always Steps to Reproduce: 1. Sign up with Lycos Mail first (with another browser, or earlier build). 2. Log in to Lycos Mail via the URL. Actual Results: Page refreshes and goes back to main login page. Expected Results: Mozilla should have allowed the login to proceed.
Form submission?
Assignee: jkeiser → alexsavulov
Component: HTML Form Controls → Form Submission
QA Contact: tpreston → vladimire
It's still not working on Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.2b) Gecko/20021002. I've set up a test account for you to test this. Username: bugzilla0 (that's a zero at the end) Password: mozilla
I'm seeing this with earlier trunk builds. linux trunk 2002092621 works, but 2002092804 does not. also, using an invalid username/password still "works". it brings up a page to "Join the Lycos Network" marking NEW
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression
backing out the patch from bug 156725 fixes the problem ==> Cookies
Assignee: alexsavulov → morse
Component: Form Submission → Cookies
Keywords: top100
QA Contact: vladimire → tever
This site is evil. It is setting cookies with: set-cookie: a=b;expires= and expecting them to be session cookies. It's a violation of the RFC2109 cookie spec to have a non-valid date string following "expires=". The correct way to set session cookies is not to have any "expires" or "max-age" attribute in the set-cookie header. But since IE allows this, we'll have to do so as well. Patch forthcoming.
Status: NEW → ASSIGNED
Priority: -- → P2
Target Milestone: --- → mozilla1.2beta
Comment on attachment 101662 [details] [diff] [review] allow for missing datestring on expires attribute r=sgehani
Attachment #101662 - Flags: review+
Comment on attachment 101662 [details] [diff] [review] allow for missing datestring on expires attribute sr=dveditz
Attachment #101662 - Flags: superreview+
Patch checked in.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Can we reassign this to evangelism to get Lycos aware of the problem? It's rather ugly that we have to check in workarounds for simple problems like this one.
No sense reassigning this one since it is already fixed. But if you'd like to open a new bug report to get this patch removed, then do so and assign it to evangelism.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: