bug 171944, unable to log into lycos mail, r=mstoltz, sr=dveditz